added icons & added react-select & pinned and unpinned items

--- a/src/components/TabsList/TabsItem/tabs-item.module.css
+++ b/src/components/TabsList/TabsItem/tabs-item.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 17px 20px;
     border: 1px solid #ddd;
     width: 150px;
@@ -12,12 +13,21 @@
     color: #7f858d;
     background: #fefefe;
     text-align: center;
+    gap: 5px;
 }
+
 
 .wrapper:hover {
     background: #f4f7f9;
     color: #343434;
     border-top: 3px solid blue
+}
+
+.pin {
+    width: 100px;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .title {
@@ -32,7 +42,6 @@
     background: none;
     border: none;
     padding: 9px 0px;
-    margin-left: 10px;
     color: #000;
     cursor: pointer;
 }
@@ -40,4 +49,9 @@
 .list {
     display: flex;
     overflow: auto;
+}
+
+.pinBtn {
+    position: absolute;
+    bottom: -20px;
 }
